# tpDcc-libs-resources

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pythonpackage.yml
tests/: test_general.py
tpDcc/libs/resources/: __init__.py  __logging__.ini  __version__.py  _version.py  loader.py  res.qrc
tpDcc/libs/resources/core/: __init__.py  cache.py  color.py  icon.py  lib.py  pixmap.py  resource.py  style.py  theme.py  utils.py
tpDcc/libs/resources/styles/: default.css  default_maya2019.css
tpDcc/libs/resources/styles/base/: base.css  calendar.css  checkbox.css  combobox.css  dialog.css  dockwidget.css  frame.css  groupbox.css  headerview.css  itemview.css  label.css  lineedit.css  listview.css  listwidget.css  menu.css  menubar.css  pushbutton.css  radiobutton.css  scrollbar.css  sizes.css  spinbox.css  splitter.css  tab.css  tabbar.css  tablewidget.css  tablewview.css  textedit.css  toolbar.css  toolbutton.css  tooltip.css  treeview.css  window.css
tpDcc/libs/resources/styles/qdarkstyle/: base.css  checkbox.scss  groupbox.scss  statusbar.scss  tooltip.css  widget.scss  window.scss
tpDcc/libs/resources/styles/tpdcc/: avatar.css  button.css  combobox.css  datalibrary.css  dragger.css  groupbox.css  label.css  lineedit.css  message.css  progressbar.css  slider.css  stack.css  toolbutton.css  toolset.css  tpdcc.css  window.css
tpDcc/libs/resources/themes/: maya.yml  qdarkstyle.yml
workflows/: pythonpackage.yml
